# libtagfs-core

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  cmake-multi-platform.yml  release.yml
cmake/: tagfs-config.cmake.in
docs/: devops.md
examples/: hello.c
include/: version.h.in
include/tagfs/: core.h
src/: core.c
tests/unit/: CMakeLists.txt  main_test.cpp
